--- a/public/page-interview01.html
+++ b/public/page-interview01.html
@@ -125,7 +125,7 @@
                   <div class="l_interview__content">
                     <ul class="p-interview__list grid md:grid-cols-1">
                       <li class="p-interview__list-item">
-                        <a href="member02.html">
+                        <a href="page-interview02.html">
                           <i class="p-interview__list-item-cat">Member interview 　　ー 社員インタビュー　　</i>
                           <picture>
                             <source srcset="./assets/img/top/interview02.png" type="image/webp" />
@@ -187,6 +187,18 @@
               </li>
             </ul>
           </div>
+
+          <section class="c-cta sec">
+            <div class="c-cta__inner">
+              <div class="c-cta__txt">
+                <h2 class="c-cta__title"><small class="en">Recruit</small>現在募集中の職種はこちら</h2>
+                <div class="btn">
+                  <a href="https://hr-hacker.com/sakura-tech/job-offers?salary_style=&min_salary=&free_word=" target="_blank" class="btn__link">詳しくはこちら</a>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!-- /cta  template-->
         </main>
 
         <footer class="c-footer">
