--- a/public/page-flow.html
+++ b/public/page-flow.html
@@ -60,93 +60,99 @@
           </div>
           <!-- /下層ヘッダー -->
 
-          <section class="c-hero">
-            <div class="c-hero__inner">
-              <div class="c-hero__txt">
-                <h2 class="c-hero__title">営業職について</h2>
-                <p class="c-hero__desc">サクラテックの営業は、既存顧客との信頼関係を深めつつ、新しい市場の開拓にも挑戦できる仕事です。<br />今回は入社のきっかけから職場の雰囲気、やりがいあるエピソードや将来のビジョンまで、現場で活躍する社員の声をお届けします。</p>
-                <div class="btn">
-                  <a href="" class="btn__link">求人内容の詳細はこちら</a>
-                </div>
-              </div>
-            </div>
-          </section>
-          <!-- /cta -->
-
           <div class="l-page-content">
-            <section class="p-member sec">
-              <div class="p-member__box" id="sales_position">
-                <h2 class="p-member__title l_subpage-title">
-                  一歩踏み出す勇気で、<br />
-                  新市場と会社の未来を切り拓く。
-                </h2>
+            <div class="c-anchorlink">
+              <ul class="c-anchorlink__list flex">
+                <li class="c-anchorlink__item">
+                  <a href="#job_overview" class="c-anchorlink__link"> 求める人物像 </a>
+                </li>
+                <li class="c-anchorlink__item">
+                  <a href="#job_overview" class="c-anchorlink__link"> 選考フロー </a>
+                </li>
+              </ul>
+            </div>
 
-                <div class="p-member__data">
-                  <div class="name">
-                    <div class="flex"><span class="name__position">営業部 主任</span><small>2021年入社</small></div>
-                    <span class="name__person">中村 朋晏 <small class="en">Nakamura Tomoyasu</small></span>
-                  </div>
-                </div>
-                <div class="p-member__img">
-                  <img src="./assets/img/interview/member01/member_img01.jpg" alt="営業" />
-                </div>
-
-                <div class="p-member__text">
-                  <h3 class="p-member__text-title">社員と共に成長できる職場で。</h3>
-                  <p class="p-member__text-desc">
-                    兄が先に入社しており、会社の理念や社員を大切にする考え方を聞く中で共感し、私もここで挑戦したいと思いました。サクラテックは「最高の仲間と共に日本を代表するWIRE COMPANYをつくる」というビジョンを掲げており、従業員満足度を重視し、社員の幸せを会社がつくっていく姿勢に強く惹かれました。
-                    入社後は想像以上に経営陣との距離が近く、意見もすぐに反映されることに驚きました。実際、研修中に「この作業は無駄ではないか」と改善提案したところ、すぐに取り入れていただけた経験もあります。現在は既存のお客様への対応に加え、新規開拓にも挑戦しています。担当する金網メーカーなどを訪問し、市況や使用状況を伺いながら信頼関係を築いています。
-                    職場はとてもアットホームで、困ったことがあれば部署を超えて相談できますし、上司や先輩も丁寧に指導してくださるので、安心して成長できる環境です。
-                  </p>
-                </div>
-
-                <div class="p-member__img">
-                  <img src="./assets/img/interview/member01/member_img02.jpg" alt="営業" />
-                </div>
-
-                <div class="p-member__text">
-                  <h3 class="p-member__text-title">信頼を築き課題を解決する喜び。</h3>
-                  <p class="p-member__text-desc">
-                    営業のやりがいは、お客様の課題を解決し、信頼関係を深められたときにあります。以前、あるお客様から短納期での製品納入のご相談をいただいた際には、出荷担当と何度も調整を重ね、無事納期に間に合わせることができました。そのとき「君にお願いして良かった」と感謝の言葉をいただき、大きな達成感を覚えました。
-                    入社当初は製品知識も乏しく苦労しましたが、先輩方の指導や多くのお客様との対話を通じて専門性を磨き、「相手の求めるものを正しく聞き出す力」や「分かりやすく伝える力」を身につけることができました。新規開拓にも自ら動き、時には競合からしか仕入れていない企業にも訪問します。そうした行動から新しいご縁が生まれることもあります。
-                    今後は製品や業界知識をさらに深め、藻がつかない鉄線や耐久性の高い鉄筋など新製品の開発にも挑戦し、日本のインフラや社会に貢献できる営業を目指したいと考えています。
-                  </p>
-                </div>
-
-                <div class="p-member__flow">
-                  <i class="p-member__flow-cat"><small class="en">Flow of the day</small> 　　ー ある1日の仕事の流れ　　</i>
-                  <div class="p-member__flow-img">
-                    <img src="./assets/img/interview/member01/flow.svg" alt="ある1日の仕事の流れ" />
-                  </div>
-                </div>
-
-                <div class="l_interview">
-                  <h2 class="l_interview-title">この職種の社員インタビューを見る</h2>
-                  <div class="l_interview__content">
-                    <ul class="p-interview__list grid md:grid-cols-1">
-                      <li class="p-interview__list-item">
-                        <a href="page-interview02.html">
-                          <i class="p-interview__list-item-cat">Member interview 　　ー 社員インタビュー　　</i>
-                          <picture>
-                            <source srcset="./assets/img/top/interview02.png" type="image/webp" />
-                            <source srcset="./assets/img/top/interview02.png" />
-                            <img src="./assets/img/top/interview02.png" alt="中村 朋晏" width="100%" height="100%" />
-                          </picture>
-                          <div class="name">
-                            <span class="name__position">製造部 主任</span>
-                            <span class="name__person"
-                              >滝野 恭平 <small class="en"><b>T</b>akino <b>K</b>yohei</small></span
-                            >
-                          </div>
-                          <h3>
-                            生産の司令塔<small>として信用を守り、<br /></small> 製品開発<small>にも挑んでいく。</small>
-                          </h3>
-                        </a>
-                      </li>
-                    </ul>
+            <section class="c-cta--02 sec">
+              <div class="c-cta--02__inner">
+                <div class="c-cta--02__txt">
+                  <h2 class="c-cta--02__title"><small class="en">Recruit</small>中途・プロフェッショナル人材の<br />採用についてはこちら</h2>
+                  <div class="btn">
+                    <a href="https://hr-hacker.com/sakura-tech/job-offers?salary_style=&min_salary=&free_word=" target="_blank" class="btn__link">詳しくはこちら</a>
                   </div>
                 </div>
               </div>
+            </section>
+            <!-- /cta  template-->
+
+            <section class="p-flow sec">
+              <div class="p-flow__personality" id="personality">
+                <h2 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Our Ideal Team Member </small>求める人物像</h2>
+                <div class="p-flow__personality-message flex">
+                  <div class="p-flow__personality-message-left"><img src="./assets/img/flow/flow_img01.jpg" alt="代表取締役 大橋 翔太" /></div>
+                  <div class="p-flow__personality-message-right">
+                    <h3>会社の未来づくりへ、<br />ともに挑戦しよう！</h3>
+                    <p class="desc">
+                      私が30代半ばで代表に就任したのが2022年。そこからサクラテックは「針金を、おもろい未来の引き金に。」をミッションに掲げ、業界唯一の独立系メーカーとして業界に新しい風を吹き込んでいるところです。
+                      当社でなら単に与えられた仕事をこなすだけではなく、会社の未来づくりそのものに関わることができます。会社に進化をもたらすのは従業員の意見。若手の意見もどんどん取り入れているので、あなたのアイデアをすぐに形にすることも可能です。裁量も大きく、挑戦を楽しみながら自分の成長を実感でき、将来的には幹部として会社をリードするチャンスもあります。
+                      ワクワク心動かしながら、仲間と一緒に新しい価値を創造したい方、ぜひ私たちと未来を切り拓きましょう！
+                    </p>
+                    <small class="">代表取締役 大橋 翔太 </small>
+                  </div>
+                </div>
+              </div>
+              <!-- /求める人物像 -->
+
+              <div class="p-flow__flow" id="flow">
+                <h2 class="p-flow__title l_subpage-title"><small class="p-flow__title-en en"> FLOW </small>選考フロー</h2>
+                <div class="p-flow__inner">
+                  <ul class="p-flow__list">
+                    <li class="p-flow__list-item">
+                      <div class="p-flow__list-item-icon"><img src="./assets/img/flow/flow_step01.svg" alt="書類選考" /></div>
+                      <div class="p-flow__list-item-text">
+                        <span class="en step">step01</span>
+                        <h3 class="p-flow__list-item-title">書類選考</h3>
+                        <p class="desc note">応募受付後、担当者より2営業日以内にお電話またはメールでご連絡いたします。</p>
+                      </div>
+                    </li>
+                    <li class="p-flow__list-item">
+                      <div class="p-flow__list-item-icon"><img src="./assets/img/flow/flow_step02.svg" alt="1次面接（部門の担当者もしくは部長）" /></div>
+                      <div class="p-flow__list-item-text">
+                        <span class="en step">step02</span>
+                        <h3 class="p-flow__list-item-title">1次面接（部門の担当者もしくは部長）</h3>
+                        <p class="desc note">対面もしくはオンライン</p>
+                      </div>
+                    </li>
+
+                    <li class="p-flow__list-item">
+                      <div class="p-flow__list-item-icon"><img src="./assets/img/flow/flow_step03.svg" alt="2次面接（管理部長）" /></div>
+                      <div class="p-flow__list-item-text">
+                        <span class="en step">step03</span>
+                        <h3 class="p-flow__list-item-title">2次面接（管理部長）</h3>
+                        <p class="desc note">対面もしくはオンライン</p>
+                      </div>
+                    </li>
+
+                    <li class="p-flow__list-item">
+                      <div class="p-flow__list-item-icon"><img src="./assets/img/flow/flow_step04.svg" alt="最終面接（社長）" /></div>
+                      <div class="p-flow__list-item-text">
+                        <span class="en step">step04</span>
+                        <h3 class="p-flow__list-item-title">最終面接（社長）</h3>
+                        <p class="desc note">基本的に対面で行います。</p>
+                      </div>
+                    </li>
+                    <li class="p-flow__list-item">
+                      <div class="p-flow__list-item-icon"><img src="./assets/img/flow/flow_step05.svg" alt="内定" /></div>
+                      <div class="p-flow__list-item-text">
+                        <span class="en step">step05</span>
+                        <h3 class="p-flow__list-item-title">内定</h3>
+                        <p class="desc note">ご応募～内定まで約3-4週間を予定</p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <!-- /選考フロー -->
             </section>
             <!-- /about -->
           </div>
