サイト調整

--- a/public/page-interview01.html
+++ b/public/page-interview01.html
@@ -50,7 +50,7 @@
                   <div class="l-page-title__title-en">Member interview</div>
                   <h1 class="l-page-title__title-jp">営業社員インタビュー</h1>
                 </div>
-                <div class="breadcrumb"><a href="">TOP</a> ／ <span>Member interview</span></div>
+                <div class="breadcrumb en"><a href="">TOP</a> ／ <span>Member interview</span></div>
               </div>
 
               <div class="l-page-kv">
@@ -84,7 +84,9 @@
                 <div class="p-member__data">
                   <div class="name">
                     <div class="flex"><span class="name__position">営業部 主任</span><small>2021年入社</small></div>
-                    <span class="name__person">中村 朋晏 <small class="en">Nakamura Tomoyasu</small></span>
+                    <span class="name__person"
+                      >中村 朋晏 <small class="en"><b>N</b>akamura <b>T</b>omoyasu</small></span
+                    >
                   </div>
                 </div>
                 <div class="p-member__img">
