--- a/public/page-job_overview.html
+++ b/public/page-job_overview.html
@@ -50,6 +50,7 @@
                   <div class="l-page-title__title-en">Job Overview</div>
                   <h1 class="l-page-title__title-jp">仕事紹介</h1>
                 </div>
+                <div class="breadcrumb en"><a href="">TOP</a> ／ <span>Job Overview</span></div>
               </div>
 
               <div class="l-page-kv">
@@ -75,19 +76,19 @@
             <div class="c-anchorlink">
               <ul class="c-anchorlink__list flex">
                 <li class="c-anchorlink__item">
-                  <a href="#job_overview" class="c-anchorlink__link"> 営業 </a>
+                  <a href="#sales_position" class="c-anchorlink__link"> 営業 </a>
                 </li>
                 <li class="c-anchorlink__item">
-                  <a href="#job_overview" class="c-anchorlink__link"> 営業アシスタント </a>
+                  <a href="#sales_assistant" class="c-anchorlink__link"> 営業アシスタント </a>
                 </li>
                 <li class="c-anchorlink__item">
-                  <a href="#job_overview" class="c-anchorlink__link"> 生産管理 </a>
+                  <a href="#production_management" class="c-anchorlink__link"> 生産管理 </a>
                 </li>
                 <li class="c-anchorlink__item">
-                  <a href="#job_overview" class="c-anchorlink__link"> 技術職 </a>
+                  <a href="#technical_position" class="c-anchorlink__link"> 技術職 </a>
                 </li>
                 <li class="c-anchorlink__item">
-                  <a href="#job_overview" class="c-anchorlink__link"> めっき鉄線の製造・機械オペレーター </a>
+                  <a href="#manufacturing_machine_operator" class="c-anchorlink__link"> めっき鉄線の製造・機械オペレーター </a>
                 </li>
               </ul>
             </div>
@@ -133,7 +134,7 @@
                     <ul class="p-interview__list grid md:grid-cols-1">
                       <li class="p-interview__list-item">
                         <a href="">
-                          <i class="p-interview__list-item-cat">Member interview 　　ー 社員インタビュー　　</i>
+                          <i class="p-interview__list-item-cat en">Member interview 　　ー 社員インタビュー　　</i>
                           <picture>
                             <source srcset="./assets/img/top/interview01.png" type="image/webp" />
                             <source srcset="./assets/img/top/interview01.png" />
@@ -141,7 +142,9 @@
                           </picture>
                           <div class="name">
                             <span class="name__position">営業部 主任</span>
-                            <span class="name__person">中村 朋晏 <small class="en">Nakamura Tomoyasu</small></span>
+                            <span class="name__person"
+                              >中村 朋晏 <small class="en"><b>N</b>akamura <b>T</b>omoyasu</small></span
+                            >
                           </div>
                           <h3>一歩踏み出す勇気<small>で、</small><br />新市場と会社の未来<small>を切り拓く。</small></h3>
                         </a>
@@ -159,7 +162,7 @@
                   <p class="p-job_overview__desc">営業担当のサポート役として、資料作成や受発注業務、顧客対応など幅広い事務業務を行います。さらに、貿易実務にも関わるため、英語力や国際取引の知識を活かすチャンスもあります。営業活動を円滑に進める“縁の下の力持ち”として活躍いただきます。</p>
                 </div>
                 <div calss="p-job_overview__img">
-                  <img src="./assets/img/job_overview/job_overview_img01.jpg" alt="営業" />
+                  <img src="./assets/img/job_overview/job_overview_img02.jpg" alt="営業アシスタント" />
                 </div>
 
                 <div class="p-job_overview__environment">
@@ -194,7 +197,7 @@
                   <p class="p-job_overview__desc">生産計画の立案から人材配置、設備管理、資材発注、年間稼働スケジュールの策定まで幅広く担当。伸線→めっき加工→検査・出荷という一連の工程を行う製造工場全体を統括します。独自の技術で生み出す「極厚亜鉛めっき線」の安定供給を支える要となるポジションです。</p>
                 </div>
                 <div calss="p-job_overview__img">
-                  <img src="./assets/img/job_overview/job_overview_img01.jpg" alt="営業" />
+                  <img src="./assets/img/job_overview/job_overview_img03.jpg" alt="生産管理" />
                 </div>
 
                 <div class="p-job_overview__environment">
@@ -204,8 +207,8 @@
                       <tr>
                         <th>勤務地</th>
                         <td>
-                          本社／倉庫：〒578-0905 大阪府東大阪市川田3-10-7<br />
-                          ※アクセス：近鉄けいはんな線「吉田駅」から徒歩18分
+                          岐阜工場：〒509-0249 岐阜県可児市姫ケ丘2-18<br />
+                          ※アクセス：JR太多線「可児駅」・名鉄広見線「新可児駅」から車8分
                         </td>
                       </tr>
                       <tr>
@@ -228,15 +231,17 @@
                         <a href="">
                           <i class="p-interview__list-item-cat">Member interview 　　ー 社員インタビュー　　</i>
                           <picture>
-                            <source srcset="./assets/img/top/interview01.png" type="image/webp" />
-                            <source srcset="./assets/img/top/interview01.png" />
-                            <img src="./assets/img/top/interview01.png" alt="中村 朋晏" width="100%" height="100%" />
+                            <source srcset="./assets/img/top/interview02.png" type="image/webp" />
+                            <source srcset="./assets/img/top/interview02.png" />
+                            <img src="./assets/img/top/interview02.png" alt="滝野 恭平" width="100%" height="100%" />
                           </picture>
                           <div class="name">
-                            <span class="name__position">営業部 主任</span>
-                            <span class="name__person">中村 朋晏 <small class="en">Nakamura Tomoyasu</small></span>
+                            <span class="name__position">製造部 主任</span>
+                            <span class="name__person"
+                              >滝野 恭平 <small class="en"><b>T</b>akino <b>K</b>yohei</small></span
+                            >
                           </div>
-                          <h3>一歩踏み出す勇気<small>で、</small><br />新市場と会社の未来<small>を切り拓く。</small></h3>
+                          <h3>生産の司令塔<small>として信用を守り、</small><br />製品開発<small>にも挑んでいく。</small></h3>
                         </a>
                       </li>
                     </ul>
@@ -252,7 +257,7 @@
                   <p class="p-job_overview__desc">金属系や機械系の知識を活かし、極厚亜鉛めっき鉄線や亜鉛アルミ合金めっき鉄線の開発・応用に携わります。用途に応じた仕様決定や新分野開拓のほか、鉄線伸線装置のメンテナンスや改良にも取り組みます。最先端技術を支える専門性が発揮できる仕事です。</p>
                 </div>
                 <div calss="p-job_overview__img">
-                  <img src="./assets/img/job_overview/job_overview_img01.jpg" alt="営業" />
+                  <img src="./assets/img/job_overview/job_overview_img04.jpg" alt="技術職" />
                 </div>
 
                 <div class="p-job_overview__environment">
@@ -291,7 +296,7 @@
                   </p>
                 </div>
                 <div calss="p-job_overview__img">
-                  <img src="./assets/img/job_overview/job_overview_img01.jpg" alt="営業" />
+                  <img src="./assets/img/job_overview/job_overview_img05.jpg" alt="めっき鉄線の製造・機械オペレーター" />
                 </div>
 
                 <div class="p-job_overview__environment">
@@ -307,11 +312,11 @@
                       </tr>
                       <tr>
                         <th>勤務時間</th>
-                        <td>8：30〜17：30（休憩12：00-13：00）</td>
+                        <td>2交替と3交替勤務のシフト制</td>
                       </tr>
                       <tr>
                         <th>休日休暇</th>
-                        <td>土日祝（月1土曜出勤）、GW、夏季、年末年始、年次有給休暇、慶弔休暇</td>
+                        <td>5勤1休（会社カレンダーによる）　※月に1回は必ず4連休以上あり。年間休日112日。<br />毎月1回定期修理期間を設けているため4連休以上があります。（土日含む）</td>
                       </tr>
                     </table>
                   </div>
