--- a/public/page-vision.html
+++ b/public/page-vision.html
@@ -74,7 +74,7 @@
             <section class="p-vision sec">
               <div class="p-vision__business" id="business">
                 <h2 class="p-vision__title l_subpage-title">私たちの提供価値と事業展開</h2>
-                <p class="p-vision__desc desc">サクラテックの「国土と社会の“興”靭化」とは、単なる耐久性などの強靭化ではなく、 以下の「つよく・やさしく・うつくしく」を兼ね備えた「“興”靭さ（おもろカッコいい）」のことを指します。</p>
+                <p class="p-vision__desc desc">サクラテックの「国土と社会の“興”靭化」とは、単なる耐久性などの強靭化ではなく、<br />以下の「つよく・やさしく・うつくしく」を兼ね備えた「“興”靭さ（おもろカッコいい）」のことを指します。</p>
               </div>
               <div class="p-vision__value">
                 <h3 class="p-vision__title l_subpage-title l_subpage-title--small"><small class="p-initiatives__title-en en">Value</small>サクラテックのバリュー</h3>
