--- a/public/page-welfare_education.html
+++ b/public/page-welfare_education.html
@@ -82,29 +82,25 @@
                   <p class="c-sec-decoration"><span class="en">Education System</span> 　　ー 教育制度</p>
                   <ul class="p-education_welfare__contents-list">
                     <li class="p-education_welfare__contents-list-item">
-                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Education System </small>教育制度</h3>
-                      <p>営業事務であれば貿易実務・簿記など、営業では貿易実務・ビジネス法務など、各職種で役立つ資格の取得を推奨しています。</p>
+                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Certification Support Program </small>資格取得支援制度</h3>
+                      <p>営業事務であれば貿易実務・簿記など、営業では貿易実務・ビジネス法務など、<br />各職種で役立つ資格の取得を推奨しています。</p>
                       <small> 必須資格は受験料負担　※合格後 </small>
                     </li>
                     <li class="p-education_welfare__contents-list-item">
-                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Education System </small>教育制度</h3>
-                      <p>営業事務であれば貿易実務・簿記など、営業では貿易実務・ビジネス法務など、各職種で役立つ資格の取得を推奨しています。</p>
-                      <small> 必須資格は受験料負担　※合格後 </small>
+                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Training and E-learning </small>外部研修・通信教育</h3>
+                      <p>技能講習やリーダー研修、マネジメント研修など、幅広い知識の習得が可能です。</p>
                     </li>
                     <li class="p-education_welfare__contents-list-item">
-                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Education System </small>教育制度</h3>
-                      <p>営業事務であれば貿易実務・簿記など、営業では貿易実務・ビジネス法務など、各職種で役立つ資格の取得を推奨しています。</p>
-                      <small> 必須資格は受験料負担　※合格後 </small>
+                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Orientation and OJT </small>導入会社説明・OJT</h3>
+                      <p>入社にあたって会社の事業や組織、製品などについて知り、現場では先輩や上司の手厚いサポートのもと実務を学んでいきます。</p>
                     </li>
                     <li class="p-education_welfare__contents-list-item">
-                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Education System </small>教育制度</h3>
-                      <p>営業事務であれば貿易実務・簿記など、営業では貿易実務・ビジネス法務など、各職種で役立つ資格の取得を推奨しています。</p>
-                      <small> 必須資格は受験料負担　※合格後 </small>
+                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> 1 on 1 meeting </small>1on1ミーティング（月１回）</h3>
+                      <p>上長との面談を通して、業務の進捗はもちろんのこと、各自のキャリア目標や課題、悩みなどを浮き彫りにし、サポートを行っていきます。</p>
                     </li>
                     <li class="p-education_welfare__contents-list-item">
-                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Education System </small>教育制度</h3>
-                      <p>営業事務であれば貿易実務・簿記など、営業では貿易実務・ビジネス法務など、各職種で役立つ資格の取得を推奨しています。</p>
-                      <small> 必須資格は受験料負担　※合格後 </small>
+                      <h3 class="p-initiatives__title l_subpage-title"><small class="p-initiatives__title-en en"> Weekly internal study group </small>社内勉強会（週1回）</h3>
+                      <p>社員主催で持ちまわりで開催する勉強会です。海外出張の共会やAI活用などテーマは様々。大阪-岐阜をオンラインでつなぎ、全員が参加します。</p>
                     </li>
                   </ul>
                   <h3 class="sub_tit">過去の社内での取り組み</h3>
@@ -160,6 +156,7 @@
                       <img src="./assets/img/education_welfare/benefits_icon11.svg" alt="" />
                     </li>
                   </ul>
+                  <p class="desc u-center u-mt-30">今後もNetflix視聴支援など福利厚生の拡充を検討中！</p>
                 </div>
 
                 <div class="p-education_welfare__contents--programs">
